#34: fix z-index of top-menu

--- a/assets/scss/partials/_elements.scss
+++ b/assets/scss/partials/_elements.scss
@@ -25,7 +25,7 @@
 	background: $orange;
 	color: white;
 	padding: 20px;
-	z-index: 10;
+	z-index: 10000;
 	transition: all 0.5s ease;
 	@media screen and (min-width: $medium) {
 		left: -120px;
